# train-trusted-content-resolver

./: .gitignore  README.md  aggregate-third-party-report.html  pom.xml  uni-resolver-config.json
.github/workflows/: eclipse-dash.yml  maven.yml  publish.yml  sbom.yml
clients/go/: .gitignore  THIRD-PARTY.txt  go.mod  go.sum  pom.xml
clients/go/cmd/: main.go
clients/go/scripts/: THIRD-PARTY.py
clients/go/tcr/: README.md  api_trusted_content_resolver.go  client.go  configuration.go  git_push.sh  model_error.go  model_known_service_endpoint_type.go  model_resolve_request.go  model_resolve_response.go  model_resolved_did.go  model_resolved_doc.go  model_resolved_pointer.go  model_resolved_trust_list.go  model_validate_request.go  model_validate_response.go  response.go  utils.go
clients/go/tcr/docs/: ResolvedDid.md  (+9 more)
clients/java/: README.md  THIRD-PARTY.txt  pom.xml
clients/js/: .gitignore  README.md  THIRD-PARTY.txt  pom.xml
clients/py/: README.md  pom.xml
clients/py/src/cmd/: pyproject.toml
clients/py/src/cmd/eu/xfsc/train/tcr_cli/: __init__.py
deployment/: harbor.config
deployment/helm/: README.md
deployment/manual/: letsencrypt-prod.yaml  letsencrypt-staging.yaml  tcr-service-monitor.yaml
docker/: .env  README.md  docker-compose.yml  uni-resolver-all.yml  uni-resolver-web.yml  unires.env
docs/: Readme.md
docs/arch/: index.md
docs/build_proc/: index.md
docs/client_api/: index.md
docs/install/: index.md
docs/rest_api/: index.md
docs/usage_guide/: index.md
openapi/: tcr_openapi.yaml
service/: Dockerfile  THIRD-PARTY.txt  pom.xml
(+63 files in other folders)
